[gd_scene load_steps=9 format=2]

[ext_resource path="res://chest/chest.tres" type="Texture" id=1]
[ext_resource path="res://chest/Chest.gd" type="Script" id=2]
[ext_resource path="res://chest/audio/chest_slide.wav" type="AudioStream" id=3]
[ext_resource path="res://chest/audio/chest_destroy.wav" type="AudioStream" id=4]
[ext_resource path="res://chest/audio/chest_bump.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "move_horizontal"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "move_vertical"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.5 ), Vector2( 1, 1 ) ]
}

[node name="Chest" type="KinematicBody2D" groups=[
"Chest",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 4 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 4, 4 )
cast_to = Vector2( 0, 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/move_horizontal = SubResource( 2 )
anims/move_vertical = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="ChestDestroyedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ChestBumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
